--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,16 @@
 [env:d1_mini]
 ; platform = espressif8266
 platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
-; board = d1_mini
-board = nodemcuv2
+board = d1_mini
+; board = nodemcuv2
 framework = arduino
 ; upload_port = 192.168.0.237
+upload_speed = 460800
 monitor_speed = 115200
+; build_flags = -D DEBUG_ESP_PORT=Serial
+;               -D DEBUG_ESP_SSL
+;               -D DEBUG_ESP_TLS_MEM
+;               -D DEBUG_NTPCLIENT
+board_build.f_cpu = 160000000L
+; board_build.f_cpu  = 80000000L
+board_build.f_flash = 80000000L
