--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,8 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:d1_mini]
-; platform = espressif8266
-platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
+platform = espressif8266
+; platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
 board = d1_mini
 ; board = nodemcuv2
 framework = arduino
